# sparx-alpha

./: VERSION  configure.py  fedora-install.sh  iaa-install.sh  install.sh  interface_design  linux-install.sh  load_tiara_module.sh  pre-install.sh  pyproject.toml  qsub_template  setup.py  sparx_quick_start.txt  test.sh  tiara-install.sh  ubuntu-install.sh
lib/sparx/: __init__.py  grid.py  inputs.py  miriad.py  models.py  physics.py  plotter.py  pre_error.py  pre_hdf.py  pre_mesh.py  pre_profile.py  pre_visual.py  tasks.py  utils.py
preprocessor/presparx/AGB_sph1d/: grid.py  model.py
preprocessor/presparx/Disk_cyl2d/: grid.py  model.py
preprocessor/presparx/Disk_sph2d/: grid.py  model.py
preprocessor/script/: CYL2D_preprocessor.py  SPH2D_preprocessor.py  nested3D_Shu.py  nested3D_ZEUS.py
src/: cpgplot-wrappers.c  cpgplot-wrappers.h  data_structs.c  debug.c  error.c  fits-and-miriad-wrappers.c  fits-and-miriad-wrappers.h  geometry.c  geometry.h  kappa.c  molec-hdf5.c  molec.c  numerical.c  physics.h  sparx-ImageTracing.c  sparx-inputs.c  sparx-io.c  sparx-model.c  sparx-physics.c  sparx-pyext-_sparx.c  sparx-python.c  sparx-task-amc.c  sparx-task-coldens.c  sparx-task-contobs.c  sparx-task-example.c  sparx-task-pops2ascii.c  sparx-task-pygrid.c  sparx-task-telsim.c  sparx-task-template.c  sparx-task-visual.c  sparx-task-w3oh.c  sparx-test.c  sparx-validate.c  sparx.h  vtk-wrapper.c  vtk-wrapper.h  zone-hdf5.c  zone.c  zone.h
unit_tests/amc/: test
unit_tests/grid/sph1d/: test
unit_tests/parallel_job/: test
unit_tests/presparx_zeus/: zeus_parameter.py
(+31 files in other folders)
